package com.english.learning.entity;

public enum LessonType {
    AUDIO,
    YOUTUBE
}
