@startuml Class_Diagram
title Class Diagram - English Listening Practice Website

skinparam classAttributeIconSize 0

package "Entity Layer" {

    class User {
        - id : Long
        - username : String
        - email : String
        - password : String
        - role : String
        - avatarUrl : String
        - provider : String
        - providerId : String
        - totalActiveTime : Integer
        - createdAt : LocalDateTime
    }

    class Category {
        - id : Long
        - name : String
        - imageUrl : String
        - levelRange : String
        - type : LessonType
        - totalLessons : Integer
        - description : String
    }

    class Section {
        - id : Long
        - name : String
        - description : String
        - category : Category
    }

    class Lesson {
        - id : Long
        - title : String
        - level : String
        - type : LessonType
        - youtubeVideoId : String
        - totalSentences : Integer
        - section : Section
    }

    class Sentence {
        - id : Long
        - audioUrl : String
        - content : String
        - startTime : Double
        - endTime : Double
        - orderIndex : Integer
        - lesson : Lesson
    }

    class UserProgress {
        - id : Long
        - completedSentences : Integer
        - status : String
        - lastAccessed : LocalDateTime
        - user : User
        - lesson : Lesson
    }

    class Comment {
        - id : Long
        - content : String
        - createdAt : LocalDateTime
        - sentence : Sentence
        - user : User
        - parent : Comment
    }

    class CommentVote {
        - id : Long
        - isLike : Boolean
        - createdAt : LocalDateTime
        - comment : Comment
        - user : User
    }

    class SpeakingResult {
        - id : Long
        - accuracy : Double
        - recognizedText : String
        - userAudioUrl : String
        - createdAt : LocalDateTime
        - sentence : Sentence
        - user : User
    }

    class PasswordResetToken {
        - id : Long
        - token : String
        - user : User
        - expiryDate : LocalDateTime
        - createdAt : LocalDateTime
    }

    enum LessonType {
        AUDIO
        YOUTUBE
    }
}

Category "1" --o "many" Section : category_id
Section "1" --o "many" Lesson : section_id
Lesson "1" --o "many" Sentence : lesson_id
User "1" --o "many" UserProgress : user_id
Lesson "1" --o "many" UserProgress : lesson_id
Sentence "1" --o "many" Comment : sentence_id
User "1" --o "many" Comment : user_id
Comment "0..1" --o "many" Comment : parent_id
Comment "1" --o "many" CommentVote : comment_id
User "1" --o "many" CommentVote : user_id
Sentence "1" --o "many" SpeakingResult : sentence_id
User "1" --o "many" SpeakingResult : user_id
User "1" --o "many" PasswordResetToken : user_id
Category ..> LessonType : uses
Lesson ..> LessonType : uses

@enduml
